[package]
name = "cipher"
version = "0.1.0"
edition = "2021"
description = "Educational TLS 1.3 implementation"
license = "MIT"
repository = "https://github.com/blackabee/cipher"

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
hmac = "0.12"
x25519-dalek = { version = "2", features = ["reusable_secrets"] }
p256 = { version = "0.13", features = ["ecdh", "ecdsa"] }
x509-parser = "0.16"
rand = "0.8"
thiserror = "1"
signature = "2"
rsa = { version = "0.9", features = ["sha2"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
tokio-test = "0.4"
hex = "0.4"
